courses/430_programming-languages/assignment-6/tests/error/hw5_error14.correct
cannot pass value of type 'int' as 'bool'
